--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -14,6 +14,7 @@
     <?php $this->headScript()->prependFile($this->baseUrl('lib/jquery/jquery-1.8.3.js')); ?>
     <?php $this->headScript()->appendFile($this->baseUrl('lib/bootstrap/js/bootstrap.js')); ?>
     <?php $this->headScript()->appendFile($this->baseUrl('lib/jCarousel/lib/jquery.jcarousel.js')); ?>
+    <?php $this->headScript()->appendFile($this->baseUrl('js/frontend.js')); ?>
 
     <?php echo $this->headLink(); ?>
     <?php echo $this->headScript(); ?>
@@ -117,7 +118,7 @@
                     Beranda
                   </a>
                 </li>
-                <li><a href="#">Profil</a></li>
+                <li><a href="<?php echo $this->url(array('controller' => 'profil', 'action' => 'index')); ?>">Profil</a></li>
                 <li><a href="#">Kegiatan Sekolah</a></li>
                 <li><a href="#">Informasi</a></li>
                 <li><a href="#">Galeri</a></li>
@@ -149,300 +150,10 @@
       </nav>
       <section>
         <div class="content">
-          <div class="main row-fluid">
-            <div class="span8">
-              <div id="highlight" class="carousel slide">
-                <div class="carousel-inner">
-                  <div class="active item">
-                    <img src="/../upload/highlight/angklung.jpeg" alt="" />
-                  </div>
-                  <div class="item"><img src="/../upload/highlight/smkn4bdg.jpg" alt="" /></div>
-                </div>
-
-                <a href="#highlight" class="carousel-control left" data-slide="prev">&lsaquo;</a>
-                <a href="#highlight" class="carousel-control right" data-slide="next">&rsaquo;</a>
-              </div>
-            </div>
-            <div class="post span4 top-green" style="">
-              <div class="inner">
-                <h4>Berita Terbaru</h4>
-                <ul class="news-list">
-                  <li><a href="#">Festival Paduan Angklung ITB XII</a></li>
-                  <li><a href="#">Study Tour TIK SMKN 4 Bandung</a></li>
-                  <li><a href="#">Pengembangan Sistem Informasi Terintegrasi</a></li>
-                  <li><a href="#">Renovasi ulang gedung sekolah</a></li>
-                  <li><a href="#">Tutorial dan pengenalan Zend Framework</a></li>
-                  <li><a href="#">Masjid SMK Negeri 4 Bandung Belum siap dipakai</a></li>
-                  <li><a href="#">Siswa mengeluhkan tidak adanya air untuk wudhu</a></li>
-                  <li><a href="#">Suasana pada saat siswa disibukan Tugas Akhir</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="jurusan row-fluid">
-            <div class="inner">
-              <div class="span4">
-                <i class="icon-desktop icon-2x"></i>
-                <h3>Teknik Informatika</h3>
-                <p>Rekayasa Perangkat Lunak, Teknik Komputer dan Jaringan, dan Multimedia.</p>
-              </div>
-              <div class="span4">
-                <i class="icon-bolt icon-2x" style="margin-left: 10px;"></i>
-                <h3>Ketenaga Listrikan</h3>
-                <p>Teknik Instalasi Tenaga Listrik, dan Teknik Otomasi Industri.</p>
-              </div>
-              <div class="span4">
-                <i class="icon-facetime-video icon-2x"></i>
-                <h3>Audio Video</h3>
-                <p>Teknik yang bekerja di bidang elektronika khususnya Audio dan Video.</p>
-              </div>
-            </div>
-          </div>
-          <div class="row-fluid row-fluid-bordered">
-            <div class="content-inner">
-              <div class="span3">
-                <h4><i class="icon-picture"></i> Galeri</h4>
-                <p>Pelatihan teknis website Lamanbudaya di hotel Gren Alia Cikini.
-                  <a href="javascript:void(0)" id="control-left"><i class="icon-chevron-left" ></i></a>
-                  <a href="javascript:void(0)" id="control-right"><i class="icon-chevron-right" ></i></a>
-                </p>
-
-              </div>
-              <div class="span9">
-                <div class="jcarousel">
-                  <ul>
-                    <li><img class="thumbnail" src="<?php echo $this->baseUrl('timthumb.php?src=upload/gallery/foto1.jpg&w=320&h=260&q=100'); ?>" alt="" /></li>
-                    <li><img class="thumbnail" src="<?php echo $this->baseUrl('timthumb.php?src=upload/gallery/foto2.jpg&w=320&h=260&q=100'); ?>" alt="" /></li>
-                    <li><img class="thumbnail" src="<?php echo $this->baseUrl('timthumb.php?src=upload/gallery/foto3.jpg&w=320&h=260&q=100'); ?>" alt="" /></li>
-                    <li><img class="thumbnail" src="<?php echo $this->baseUrl('timthumb.php?src=upload/gallery/foto3.jpg&w=320&h=260&q=100'); ?>" alt="" /></li>
-                    <li><img class="thumbnail" src="<?php echo $this->baseUrl('timthumb.php?src=upload/gallery/foto2.jpg&w=320&h=260&q=100'); ?>" alt="" /></li>
-                    <li><img class="thumbnail" src="<?php echo $this->baseUrl('timthumb.php?src=upload/gallery/foto1.jpg&w=320&h=260&q=100'); ?>" alt="" /></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-
-          </div>
-          <div class="main row-fluid">
-            <div class="span8">
-              <div class="content-inner">
-                <h4><i class="icon-pushpin"></i> Artikel</h4>
-                <ul class="unstyled article">
-                  <li>
-                    <article>
-                      <div class="pull-left">
-                        <img src="/../upload/avatar/asdf.jpg" alt="" width="50" height="50"/>
-                        <div class="date">
-                          <span class="day">29</span>
-                          <span class="month">Des</span>
-                        </div>
-                      </div>
-                      <div class="article-content">
-                        <h5><a href="#">Tutorial membuat halaman login berbasis PHP dan MYSql</a></h5>
-                        <p>
-                          Lorem ipsum dolor sit amet,aliquip ex ea commodo consequat. cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                      </div>
-                      <div class="article-footer">
-                        <i class="icon-user"></i> <a href="#">Egi Soleh Hasdi</a>&nbsp;&nbsp;
-                        <i class="icon-eye-open"></i> 1012 &nbsp;&nbsp;
-                        <i class="icon-comments"></i> 192 &nbsp;&nbsp;
-                        <i class="icon-thumbs-up"></i> 50 &nbsp;&nbsp;
-                        <i class="icon-tags"></i> <a href="#">MySQL</a>, <a href="#">PHP</a>&nbsp;&nbsp;
-                      </div>
-                    </article>
-                    <hr />
-                  </li>
-                  <li>
-                    <article>
-                      <div class="pull-left">
-                        <img src="/../upload/avatar/asdf.jpg" alt="" width="50" height="50"/>
-                        <div class="date">
-                          <span class="day">29</span>
-                          <span class="month">Des</span>
-                        </div>
-                      </div>
-                      <div class="article-content">
-                        <h5><a href="#">Tutorial membuat halaman login berbasis PHP dan MYSql</a></h5>
-                        <p>
-                          Lorem ipsum dolor sit amet,aliquip ex ea commodo consequat. cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                      </div>
-                      <div class="article-footer">
-                        <i class="icon-user"></i> <a href="#">Egi Soleh Hasdi</a>&nbsp;&nbsp;
-                        <i class="icon-eye-open"></i> 1012 &nbsp;&nbsp;
-                        <i class="icon-comments"></i> 192 &nbsp;&nbsp;
-                        <i class="icon-thumbs-up"></i> 50 &nbsp;&nbsp;
-                        <i class="icon-tags"></i> <a href="#">MySQL</a>, <a href="#">PHP</a>&nbsp;&nbsp;
-                      </div>
-                    </article>
-                    <hr />
-                  </li>
-                  <li>
-                    <article>
-                      <div class="pull-left">
-                        <img src="/../upload/avatar/asdf.jpg" alt="" width="50" height="50"/>
-                        <div class="date">
-                          <span class="day">29</span>
-                          <span class="month">Des</span>
-                        </div>
-                      </div>
-                      <div class="article-content">
-                        <h5><a href="#">Tutorial membuat halaman login berbasis PHP dan MYSql</a></h5>
-                        <p>
-                          Lorem ipsum dolor sit amet,aliquip ex ea commodo consequat. cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                      </div>
-                      <div class="article-footer">
-                        <i class="icon-user"></i> <a href="#">Egi Soleh Hasdi</a>&nbsp;&nbsp;
-                        <i class="icon-eye-open"></i> 1012 &nbsp;&nbsp;
-                        <i class="icon-comments"></i> 192 &nbsp;&nbsp;
-                        <i class="icon-thumbs-up"></i> 50 &nbsp;&nbsp;
-                        <i class="icon-tags"></i> <a href="#">MySQL</a>, <a href="#">PHP</a>&nbsp;&nbsp;
-                      </div>
-                    </article>
-                  </li>
-                </ul>
-                <br />
-                <br />
-                <br />
-
-                <h4><i class="icon-rss"></i>&nbsp; Rubrik Edukasi</h4>
-                <ul class="unstyled">
-                  <?php $feed = Zend_Feed_Reader::import('http://www.kompas.com/getrss/edukasi'); ?>
-                  <?php foreach ($feed as $index => $news): ?>
-                    <?php if ($index < 5): ?>
-                      <li>
-                        <h5>
-                          <a href="<?php echo $news->getLink(); ?>" target="_blank">
-                            <?php echo $news->getTitle(); ?>
-                          </a>
-                        </h5>
-                        <?php echo $news->getDescription(); ?>
-                        <div class="clearfix"></div>
-                        <?php if ($index != 4): ?>
-                          <hr />
-                        <?php endif; ?>
-                      </li>
-                    <?php else: ?>
-                      <!--we only display 5 latest news-->
-                    <?php endif; ?>
-
-                  <?php endforeach; ?>
-                </ul>
-                <br />
-                <br />
-                <br />
-              </div>
-            </div>
-            <div class = "sidebar span4 well" style = "">
-              <div class = "push"></div>
-              <div class = "inner">
-                <div class = "agenda widget top-gray">
-                  <div class = "widget-header">
-                    <h4><i class = "icon-info-sign"></i> Pengumuman</h4>
-                  </div>
-                  <div class = "widget-content">
-                    <ul class = "list_a" style = "list-style: square">
-                      <li><a href = "#">Kisi-Kisi Ujian Nasional 2012/2013</a></li>
-                      <li><a href = "#">Lomba Menulis Surat Remaja Nasional Kemkominfo</a></li>
-                      <li><a href = "#">Prosedur Operasi Standar (POS) Ujian Nasional 2012/2013</a></li>
-                      <li><a href = "#">Permendikbud Nomor 3 Tahun 2013 Tentang Kriteria Kelulusan dan Penyelenggaraan Ujian Nasional</a></li>
-                    </ul>
-                  </div>
-                </div>
-                <div class = "agenda widget top-blue">
-                  <div class = "widget-header">
-                    <h4><i class = "icon-calendar"></i> Agenda</h4>
-                  </div>
-                  <div class = "widget-content">
-                    <ul class = "unstyled">
-                      <li>
-                        <div class = "time">16 Feb 2012 s/d 18 Feb 2013</div>
-                        <a href = "">Pelatihan Lomba Keterampilan Siswa (LKS)</a>
-                      </li>
-                      <li>
-                        <div class = "time">18 Feb 2012 s/d 20 Feb 2013</div>
-                        <a href = "">Kontes angklung harpa 4</a>
-                      </li>
-                      <li>
-                        <div class = "time">16 Feb 2012</div>
-                        <a href = "">Pelatihan Lomba Keterampilan Siswa (LKS)</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-
-                <div class = "agenda widget top-red">
-                  <div class = "widget-header">
-                    <h4><i class = "icon-briefcase"></i> Lowongan Kerja</h4>
-                  </div>
-                  <div class = "widget-content">
-                    <ul class = "unstyled">
-                      <li>
-                        <a href = "#"><strong>Web Developer</strong></a><br />
-                        <small>- PT. Sangkuriang Internasional</small>
-                      </li>
-                      <li>
-                        <a href = "#"><strong>UI Designer</strong></a><br />
-                        <small>- PT. Melvar Lintas Nusa</small>
-                      </li>
-                      <li>
-                        <a href = "#"><strong>System Analyst</strong></a><br />
-                        <small>- PT. Sangkuriang Internasional</small>
-                      </li>
-                      <li>
-                        <a href = "#"><strong>Online Marketer</strong></a><br />
-                        <small>- PT. INTI</small>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-
-                <div class = "widget top-green">
-                  <div class = "widget-header">
-                    <h4><i class = "icon-list-alt"></i> Jajak Pendapat</h4>
-                  </div>
-                  <div class = "widget-content">
-                    <form action = "" method = "post">
-                      <p>Bagaimana menurut anda website SMKN 4 Bandung?</p>
-                      <ul class = "unstyled">
-                        <li>
-                          <label for = "vote1" class = "radio">
-                            <input type = "radio" name = "vote" id = "vote1" />
-                            Sangat Baik
-                          </label>
-                        </li>
-                        <li>
-                          <label for = "vote2" class = "radio">
-                            <input type = "radio" name = "vote" id = "vote2" />
-                            Cukup
-                          </label>
-                        </li>
-                        <li>
-                          <label for = "vote3" class = "radio">
-                            <input type = "radio" name = "vote" id = "vote3" />
-                            Kurang
-                          </label>
-                        </li>
-                        <li>
-                          <label for = "vote4" class = "radio">
-                            <input type = "radio" name = "vote" id = "vote4" />
-                            Jelek
-                          </label>
-                        </li>
-                      </ul>
-                      <input type = "submit" class = "btn btn-success pull-right" value = "Kirim" />
-                      <div class = "clearfix"></div>
-                    </form>
-                  </div>
-                  <div class = "widget-footer">
-
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+          <?php 
+            echo $this->layout()->content;
+          ?>
+            
         </div>
       </section>
       <footer>
@@ -474,5 +185,8 @@
         </div>
       </footer>
     </div>
+      <a id="back-to-top" title="Back to top" href="#">
+          <img src="your-back-to-top-image.png" alt="Back to Top" />
+      </a>
   </body>
 </html>
