--- a/public/css/front_layout.css
+++ b/public/css/front_layout.css
@@ -423,3 +423,13 @@ input[type="search"], input[type="tel"], input[type="color"], .uneditable-input 
 .article .pull-left {
 
 }
+
+/*back to top*/
+/*jang top*/
+#back-to-top{
+  display: block;
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  opacity: 0;
+}
