--- a/application/modules/admin/views/scripts/article/index.phtml
+++ b/application/modules/admin/views/scripts/article/index.phtml
@@ -2,145 +2,161 @@
 
 <form action="" method="post">
 
-  <div class="row-fluid" style="margin-bottom: 20px">
-    <div class="pull-left">
-      <h3 style="display: inline">Artikel</h3>
-      <a href="<?php echo $this->url(array('action' => 'create')); ?>"
-         class="btn btn-link label label-success">
-        Tambah Artikel
-      </a>
+    <div class="row-fluid" style="margin-bottom: 20px">
+        <div class="pull-left">
+            <h3 style="display: inline">Artikel</h3>
+            <a href="<?php echo $this->url(array('action' => 'create')); ?>"
+               class="btn btn-link label label-success">
+                Tambah Artikel
+            </a>
+        </div>
+        <div class="pull-right">
+            <?php
+            echo $this->formSelect('filter[row]', $this->filter['row'], array(
+                'style' => 'width:55px'), array(
+                5   => 5,
+                10  => 10,
+                15  => 15,
+                25  => 25,
+                50  => 50,
+                100 => 100
+            ));
+            ?>
+            <button name="action" value="filter" class="btn">Atur</button>
+        </div>
     </div>
-    <div class="pull-right">
-      <?php
-      echo $this->formSelect('filter[row]', $this->filter['row'], array(
-          'style' => 'width:55px'), array(
-          5 => 5,
-          10 => 10,
-          15 => 15,
-          25 => 25,
-          50 => 50,
-          100 => 100
-      ));
-      ?>
-      <button name="action" value="filter" class="btn">Atur</button>
-    </div>
-  </div>
 
 
 
-  <div class="row-fluid">
     <div class="row-fluid">
-      <div class="pull-left">
-        <button class="btn btn-mini btn-danger"
-                name="action"
-                value="delete"
-                onclick="if(!confirm('Apakah anda yakin ingin menghapus semua artikel '
-                    +'yang dipilih?')) return false;">
-          <i class="icon-trash"></i>
-        </button>
+        <div class="row-fluid">
+            <div class="pull-left">
+                <button class="btn btn-mini btn-danger"
+                        name="action"
+                        value="delete"
+                        onclick="if (!confirm('Apakah anda yakin ingin menghapus semua artikel '
+                                        + 'yang dipilih?'))
+                                    return false;">
+                    <i class="icon-trash"></i>
+                </button>
 
-        <button class="btn btn-mini" name="action" value="filter">
-          <i class="icon-filter"></i>
-          Gunakan Filter
-        </button>
-        <button class="btn btn-mini" name="action" value="reset">
-          Atur Ulang Filter
-        </button>
-      </div>
-      <div class="pull-right">
-        <?php echo $this->paginationControl($this->articles, 'sliding', 'partial/pagination_control.phtml'); ?>
-      </div>
+                <button class="btn btn-mini" name="action" value="filter">
+                    <i class="icon-filter"></i>
+                    Gunakan Filter
+                </button>
+                <button class="btn btn-mini" name="action" value="reset">
+                    Atur Ulang Filter
+                </button>
+            </div>
+            <div class="pull-right">
+                <?php echo $this->paginationControl($this->articles, 'sliding', 'partial/pagination_control.phtml'); ?>
+            </div>
 
+        </div>
+        <div class="row-fluid">
+            <table class="table table-striped table-condensed" id="article-table">
+                <col width="1%"/>
+                <col width="10%"/>
+                <col width="3%"/>
+                <col width="5%"/>
+                <col width="5%"/>
+                <col width="5%"/>
+                <col width="5%"/>
+                <col width="4%"/>
+                <thead>
+                    <!--HEAD-->
+                    <tr>
+                        <th>
+                            <input type="checkbox"
+                                   onchange="
+                                var checkboxes = $('#article-table tbody input:checkbox');
+                                if ($(this).attr('checked')) {
+                                    $(checkboxes).attr('checked', true);
+                                } else {
+                                    $(checkboxes).removeAttr('checked');
+                                }"/>
+                        </th>
+                        <th>Judul</th>
+                        <th>Status</th>
+                        <th><i class="icon-tags"></i></th>
+                        <th><i class="icon-eye-open"></i></th>
+                        <th><i class="icon-thumbs-up"></i></th>
+                        <th><i class="icon-comments"></i></th>
+                        <th></th>
+                    </tr>
+                    <!--FILTER-->
+                    <tr>
+                        <th></th>
+                        <th>
+                            <?php
+                            echo $this->formText('filter[title]', $this->filter['title'], array(
+                                'placeholder' => 'Cari berdasarkan judul artikel...'));
+                            ?>
+                        </th>
+                        <th>
+                            <?php
+                            echo $this->formSelect('filter[status]', $this->filter['status'], array(), array(
+                                null                         => '-Tampilkan semua status-',
+                                Admin_Model_Status::ARCHIVED => "Diarsipkan ({$this->countStatus['archived']})",
+                                Admin_Model_Status::DRAFT    => "Konsep ({$this->countStatus['draft']})",
+                                Admin_Model_Status::PENDING  => "Menunggu Persetujuan ({$this->countStatus['pending']})",
+                                Admin_Model_Status::PUBLISH  => "Diterbitkan ({$this->countStatus['publish']})"
+                            ));
+                            ?>
+                        </th>
+                        <th>
+                            <?php
+                            echo $this->formText('filter[tag]', $this->filter['tag'], array(
+                                'placeholder' => 'Ketikan tag untuk pencarian'));
+                            ?>
+                        </th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <?php foreach ($this->articles as $index => $article): ?>
+                        <tr>
+                            <td>
+                                <input type="checkbox" name="articles[]"
+                                       value="<?php echo $article->id; ?>"/>
+                            </td>
+                            <td>
+                                <a href="#" target="_blank">
+                                    <strong><?php echo $article->title; ?></strong>
+                                </a>
+                            </td>
+                            <td><?php echo $this->status($article->status); ?></td>
+                            <td><?php echo $this->tags($article->tags); ?></td>
+                            <td><span class="badge badge-info"><?php echo $article->views; ?></span></td>
+                            <td><span class="badge badge-success"><?php echo (null !== $article->likes) ? count(explode(',', $article->likes)) : 0; ?></span></td>
+                            <td><span class="badge badge-warning"><?php echo $article->comments; ?></span></td>
+                            <td>
+                                <?php if (Admin_Model_Status::ARCHIVED === $article->status): ?>
+                                    <a href="<?php echo $this->url(array('action' => 'restore', 'id'     => $article->id)); ?>"
+                                       title="Kembalikan">
+                                        <i class="icon-refresh"></i>
+                                    </a>
+                                <?php endif; ?>
+                                <a href="<?php echo $this->url(array('action' => 'edit', 'id'     => $article->id)); ?>"
+                                   title="Sunting">
+                                    <i class="icon-edit"></i>
+                                </a>
+                                <a href="<?php echo $this->url(array('action' => 'delete', 'id'     => $article->id)); ?>"
+                                   title="Hapus"
+                                   onclick="if (!confirm('Apakah anda yakin ingin menghapus artikel' +
+                                            ' ini?.'))
+                                        return false">
+                                    <i class="icon-trash"></i>
+                                </a>
+                            </td>
+                        </tr>
+                    <?php endforeach; ?>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div class="row-fluid">
-      <table class="table table-striped table-condensed" id="article-table">
-        <thead>
-          <!--HEAD-->
-          <tr>
-            <th>
-              <input type="checkbox" 
-                     onchange="
-                       var checkboxes = $('#article-table tbody input:checkbox');
-                       if($(this).attr('checked')) {
-                         $(checkboxes).attr('checked', true);
-                       } else {
-                         $(checkboxes).removeAttr('checked');
-                       }"/>
-            </th>
-            <th>Judul</th>
-            <th>Status</th>
-            <th><i class="icon-tags"></i></th>
-            <th><i class="icon-eye-open"></i></th>
-            <th></th>
-          </tr>
-          <!--FILTER-->
-          <tr>
-            <th></th>
-            <th>
-              <?php
-              echo $this->formText('filter[title]', $this->filter['title'], array(
-                  'placeholder' => 'Cari berdasarkan judul artikel...'));
-              ?>
-            </th>
-            <th>
-              <?php
-              echo $this->formSelect('filter[status]', $this->filter['status'], array(), array(
-                  null => '-Tampilkan semua status-',
-                  Admin_Model_Status::ARCHIVED => "Diarsipkan ({$this->countStatus['archived']})",
-                  Admin_Model_Status::DRAFT => "Konsep ({$this->countStatus['draft']})",
-                  Admin_Model_Status::PENDING => "Menunggu Persetujuan ({$this->countStatus['pending']})",
-                  Admin_Model_Status::PUBLISH => "Diterbitkan ({$this->countStatus['publish']})"
-              ));
-              ?>
-            </th>
-            <th>
-              <?php
-              echo $this->formText('filter[tag]', $this->filter['tag'], array(
-                  'placeholder' => 'Ketikan tag untuk pencarian'));
-              ?>
-            </th>
-            <th></th>
-            <th></th>
-          </tr>
-        </thead>
-        <tbody>
-          <?php foreach ($this->articles as $index => $article): ?>
-            <tr>
-              <td>
-                <input type="checkbox" name="articles[]"
-                       value="<?php echo $article->id; ?>"/>
-              </td>
-              <td>
-                <a href="#" target="_blank">
-                  <strong><?php echo $article->title; ?></strong>
-                </a>
-              </td>
-              <td><?php echo $this->status($article->status); ?></td>
-              <td><?php echo $this->tags($article->tags); ?></td>
-              <td><span class="badge badge-info"><?php echo $article->views; ?></span></td>
-              <td>
-                <?php if (Admin_Model_Status::ARCHIVED === $article->status): ?>
-                  <a href="<?php echo $this->url(array('action' => 'restore', 'id' => $article->id)); ?>"
-                     title="Kembalikan">
-                    <i class="icon-refresh"></i>
-                  </a>
-                <?php endif; ?>
-                <a href="<?php echo $this->url(array('action' => 'edit', 'id' => $article->id)); ?>"
-                   title="Sunting">
-                  <i class="icon-edit"></i>
-                </a>
-                <a href="<?php echo $this->url(array('action' => 'delete', 'id' => $article->id)); ?>"
-                   title="Hapus"
-                   onclick="if(!confirm('Apakah anda yakin ingin menghapus artikel'+
-                         ' ini?.')) return false">
-                  <i class="icon-trash"></i>
-                </a>
-              </td>
-            </tr>
-          <?php endforeach; ?>
-        </tbody>
-      </table>
-    </div>
-  </div>
 
 </form>
