--- a/application/modules/admin/views/scripts/article/all.phtml
+++ b/application/modules/admin/views/scripts/article/all.phtml
@@ -4,7 +4,11 @@
 
     <div class="row-fluid" style="margin-bottom: 20px">
         <div class="pull-left">
-            <h3>Artikel Yang Sedang Menunggu Persetujuan</h3>
+            <h3 style="display: inline">Artikel</h3>
+            <a href="<?php echo $this->url(array('action' => 'create')); ?>"
+               class="btn btn-link label label-success">
+                Tambah Artikel
+            </a>
         </div>
         <div class="pull-right">
             <?php
@@ -35,11 +39,13 @@
                                     return false;">
                     <i class="icon-trash"></i>
                 </button>
-                <button class="btn btn-mini btn-success"
-                        name="action"
-                        value="approve"
-                        title='Setujui artikel yang dipilih'>
-                    <i class="icon-ok"></i>
+
+                <button class="btn btn-mini" name="action" value="filter">
+                    <i class="icon-filter"></i>
+                    Gunakan Filter
+                </button>
+                <button class="btn btn-mini" name="action" value="reset">
+                    Atur Ulang Filter
                 </button>
             </div>
             <div class="pull-right">
@@ -49,6 +55,15 @@
         </div>
         <div class="row-fluid">
             <table class="table table-striped table-condensed" id="article-table">
+                <col width="1%"/>
+                <col width="10%"/>
+                <col width="3%"/>
+                <col width="10%"/>
+                <col width="5%"/>
+                <col width="5%"/>
+                <col width="5%"/>
+                <col width="5%"/>
+                <col width="4%"/>
                 <thead>
                     <!--HEAD-->
                     <tr>
@@ -62,13 +77,47 @@
                                     $(checkboxes).removeAttr('checked');
                                 }"/>
                         </th>
-                        <th>Judul Artikel</th>
-                        <th>Dibuat Oleh</th>
-                        <th>Dibuat Tanggal</th>
+                        <th>Judul</th>
+                        <th>Status</th>
+                        <th>Tanggal</th>
                         <th><i class="icon-tags"></i></th>
+                        <th><i class="icon-eye-open"></i></th>
+                        <th><i class="icon-thumbs-up"></i></th>
+                        <th><i class="icon-comments"></i></th>
                         <th></th>
                     </tr>
                     <!--FILTER-->
+                    <tr>
+                        <th></th>
+                        <th>
+                            <?php
+                            echo $this->formText('filter[title]', $this->filter['title'], array(
+                                'placeholder' => 'Cari berdasarkan judul artikel...'));
+                            ?>
+                        </th>
+                        <th>
+                            <?php
+                            echo $this->formSelect('filter[status]', $this->filter['status'], array(), array(
+                                null                         => '-Tampilkan semua status-',
+                                Admin_Model_Status::ARCHIVED => "Diarsipkan ({$this->countStatus['archived']})",
+                                Admin_Model_Status::DRAFT    => "Konsep ({$this->countStatus['draft']})",
+                                Admin_Model_Status::PENDING  => "Menunggu Persetujuan ({$this->countStatus['pending']})",
+                                Admin_Model_Status::PUBLISH  => "Diterbitkan ({$this->countStatus['publish']})"
+                            ));
+                            ?>
+                        </th>
+                        <th></th>
+                        <th>
+                            <?php
+                            echo $this->formText('filter[tag]', $this->filter['tag'], array(
+                                'placeholder' => 'Ketikan tag untuk pencarian'));
+                            ?>
+                        </th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
                 </thead>
                 <tbody>
                     <?php foreach ($this->articles as $index => $article): ?>
@@ -78,23 +127,6 @@
                             'action'     => 'view',
                             'controller' => 'article',
                             'id'         => $article->id
-                        ));
-
-                        $editUrl = $this->url(array(
-                            'module'     => 'admin',
-                            'controller' => 'article',
-                            'action'     => 'edit',
-                            'id'         => $article->id,
-                            'return'     => 'approve'
-                        ));
-
-
-                        $deleteUrl = $this->url(array(
-                            'module'     => 'admin',
-                            'controller' => 'article',
-                            'action'     => 'delete',
-                            'id'         => $article->id,
-                            'return'     => 'approve'
                         ));
                         ?>
 
@@ -108,24 +140,29 @@
                                     <strong><?php echo $article->title; ?></strong>
                                 </a>
                             </td>
-                            <td><a href="#"><?php echo $article->created_by; ?></a></td>
-                            <td><?php echo Date('d F Y', strtotime($article->created_on)); ?></td>
+                            <td><?php echo $this->status($article->status); ?></td>
+                            <td><?php echo Date('d/m/Y', strtotime($article->created_on)); ?></td>
                             <td><?php echo $this->tags($article->tags); ?></td>
+                            <td><span class="badge badge-info"><?php echo $article->views; ?></span></td>
+                            <td><span class="badge badge-success"><?php echo (null !== $article->likes) ? count(explode(',', $article->likes)) : 0; ?></span></td>
+                            <td><span class="badge badge-warning"><?php echo $article->comments; ?></span></td>
                             <td>
-                                <a href="<?php echo $editUrl; ?>"
+                                <?php if (Admin_Model_Status::ARCHIVED === $article->status): ?>
+                                    <a href="<?php echo $this->url(array('action' => 'restore', 'id'     => $article->id)); ?>"
+                                       title="Kembalikan">
+                                        <i class="icon-refresh"></i>
+                                    </a>
+                                <?php endif; ?>
+                                <a href="<?php echo $this->url(array('action' => 'edit', 'id'     => $article->id)); ?>"
                                    title="Sunting">
                                     <i class="icon-edit"></i>
                                 </a>
-                                <a href="<?php echo $deleteUrl; ?>"
+                                <a href="<?php echo $this->url(array('action' => 'delete', 'id'     => $article->id)); ?>"
                                    title="Hapus"
                                    onclick="if (!confirm('Apakah anda yakin ingin menghapus artikel' +
                                             ' ini?.'))
                                         return false">
                                     <i class="icon-trash"></i>
-                                </a>
-                                <a href="<?php echo $this->url(array('id' => $article->id)) ?>"
-                                   title="Setujui">
-                                    <i class="icon-ok"></i>
                                 </a>
                             </td>
                         </tr>
